2007-09-12  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Binary/ImageReader.cs: some 64bits assemblies
	have a strange header without import tables.

2007-09-09  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/GenericContext.cs
	  Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/DefaultImporter.cs:
		Better handling of generic instances of references, where
		the number of generic parameters is not known.

2007-09-06  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/MethodDefinition: add Is** methods for MethodImplAttributes.

2007-09-04  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ReflectionWriter.cs:
		Adapt a patch by Ewout Prangsma <ewout@tallapplications.com>.
		Cache the typespec tokens instead of the typespec themselves
		because GenericParameters are somethimes considered as typespecs.

2007-08-28  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Cil/CodeWriter.cs
	  Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil.Cil/SymbolStoreHelper.cs
	  Mono.Cecil.Signatures/SignatureWriter.cs:
		Generate proper variables signatures for symbols
		stores.

2007-08-19  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Cil/CodeReader.cs:
		Deal with generic exceptions.

2007-08-15  Jb Evain  <jbevain@novell.com>

	* CodeGen/cecil.xml,
	  Mono.Cecil.Cil/OpCodes.cs:
		Fix bug spotted by Jesse Jones, ldelem.any has a
		stack behavior pop of popref, popi.

2007-08-15  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/TypeReference.cs
	  Mono.Cecil/TypeSpecification.cs:
		TypeSpecification.Module return the module of the elemen
		type now.

2007-08-13  Rodrigo B. de Oliveira <rodrigobamboo@gmail.com>

	* default.build
	  Mono.Cecil/AssemblyInfo.cs:
		Ability to pass custom defines to the c# compiler through
		the csc.defines property. KEYFILE can be used to force
		an AssemblyKeyFile attribute on AssemblyInfo.cs so strongly
		signed versions of Mono.Cecil can be produced on .net 1.1,
		cf 1.0 and cf 2.0.

2007-08-13  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Cil/CilWorker.cs: